@@ -39,7 +39,7 @@ echo "Name ${NAME}"
 echo "Sysop ${NAME}"
 echo "Location ${LOCATION}"
 echo "Address ${AKA}"
-echo "Version 0.13"
+echo "Version 0.14"
 echo ""
 echo "Link ${UPLINK_NAME}"
 echo "AKA ${UPLINK_AKA}"
