@@ -1,57 +1,54 @@
-CC = gcc
-AR = ar
-COPT = -ggdb -s -c -fPIC -O3 -Wall -I../smapi -DUNIX
-VER = 0.6
+#Settings for Digital UNIX
+
+#installation directires
 LIBDIR = /usr/local/lib
 INSTDIR = /usr/local/bin
-# LOPT = -L../smapi -L.
+
+# program settings
+CC = gcc
+AR = ar
+AR_R = r
+RM = rm
+
+COPT = -c -fPIC -Wall -ggdb -O3 -DUNIX -I../smapi
+# LOPT = -L. -L$(LIBDIR)
 LOPT = 
 
-OBJS    = patmat.o line.o fidoconfig.o fconf2msged.o fconf2golded.o fconf2aquaed.o tparser.o dir.o common.o
+# filename settings
+O = .o
+A = .a
+EXE =
+FIDOCONFIG = fidoconfig
+FCONF2AQUAED = fconf2aquaed
+FCONF2GOLDED = fconf2golded
+FCONF2MSGED  = fconf2msged
+LIBFIDOCONFIG = libfidoconfig
+LINKSMAPI = -lsmapilnx
+LINKFIDOCONFIG = -l$(FIDOCONFIG)
 
-ALL: $(OBJS) \
-     fidoconfig.a \
-     libfidoconfig.so.$(VER) \
-     tparser \
-     fconf2msged \
-     fconf2aquaed \
-     fconf2golded 
+default: all
 
-fidoconfig.a: fidoconfig.o line.o common.o patmat.o dir.o
-	$(AR) r fidoconfig.a fidoconfig.o line.o common.o patmat.o dir.o
+include makefile.common
 
-libfidoconfig.so.$(VER): fidoconfig.o line.o common.o patmat.o dir.o
-	$(CC) -shared -Wl,-soname,libfidoconfig.so.0 -o libfidoconfig.so.$(VER) line.o common.o fidoconfig.o patmat.o dir.o
+all: commonlibs libfidoconfig.so.$(VER) commonprogs
+
+clean: commonclean
+	-$(RM) so_locations
+
+distclean: commondistclean
+	-$(RM) libfidoconfig.so.$(VER)
+
+libfidoconfig.so.$(VER): $(LOBJ)
+	$(CC) -shared -Wl,-soname,libfidoconfig.so.$(VERH) -o $(LIBFIDOCONFIG).so.$(VER) line$(O) common$(O) fidoconfig$(O) patmat$(O) dir$(O) $(LOPT) 
 
 %.o: %.c
 	$(CC) $(COPT) $*.c
-
-fconf2msged: fconf2msged.o fidoconfig.a
-	$(CC) $(LOPT) fconf2msged.o -o fconf2msged -lfidoconfig -lsmapilnx
-
-fconf2golded: fconf2golded.o fidoconfig.a
-	$(CC) $(LOPT) fconf2golded.o -o fconf2golded -lfidoconfig -lsmapilnx
-
-fconf2aquaed: fconf2aquaed.o fidoconfig.a
-	$(CC) $(LOPT) fconf2aquaed.o -o fconf2aquaed -lfidoconfig -lsmapilnx
-
-tparser: tparser.o fidoconfig.a
-	$(CC) $(LOPT) tparser.o -o tparser -lfidoconfig -lsmapilnx
-
-clean:
-	-rm *~
-	-rm *.o
-
-distclean: clean
-	-rm tparser fconf2golded fconf2msged
-	-rm libfidoconfig.so.$(VER)
-	-rm fidoconfig.a
 
 install: 
 	cp -f libfidoconfig.so.$(VER) $(LIBDIR)
 	ln -sf $(LIBDIR)/libfidoconfig.so.$(VER) $(LIBDIR)/libfidoconfig.so.0
 	ln -sf $(LIBDIR)/libfidoconfig.so.0 $(LIBDIR)/libfidoconfig.so
-	install -s fconf2golded $(INSTDIR)
-	install -s fconf2msged $(INSTDIR)
-	install -s fconf2aquaed $(INSTDIR)
-	install -s tparser $(INSTDIR)
+	cp -f  fconf2msged  $(INSTDIR)/bin
+	cp -f  fconf2golded $(INSTDIR)/bin
+	cp -f  fconf2aquaed $(INSTDIR)/bin
+	cp -f  tparser      $(INSTDIR)/bin
